Added first image

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <p>Esto es una prueba de página web en GitHub!</p>
     Mi repositorio se encuentra en GitHub
+	<img src="Imagenes/Foto1.jpg" alt="Foto de la web de clase">
+
 </body>
 </html>
