--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <p>Esto es una prueba de página web en GitHub!</p>
     Mi repositorio se encuentra en GitHub
 	<img src="Imagenes/Foto1.jpg" alt="Foto de la web de clase">
+<footer>
+	<p>Company: el yo</p>
+	<p><a href="mailto:mtsbrr07@gmail.com">Mi correo</a></p>
+</footer>
 
 </body>
 </html>
