Intento dos de conflicto

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <p>Esto es una prueba de página web en GitHub!</p>
     Mi repositorio se encuentra en GitHub
 	<img src="Imagenes/Foto1.jpg" alt="Foto de la web de clase">
-https://github.com/CleanMatyx/Exercise_Unit5_website
+https://github.com/CleanMatyx/Exercise_Unit5_website esta es
 <footer>
 	<p>Company: el yo</p>
 	<p><a href="mailto:mtsbrr07@gmail.com">Mi correo</a></p>
