Intendo tres conflicto

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<img src="Imagenes/Foto1.jpg" alt="Foto de la web de clase">
 https://github.com/CleanMatyx/Exercise_Unit5_website esta es
 <footer>
-	<p>Company: el yo</p>
+	<p>Company: el yo mismo</p>
 	<p><a href="mailto:mtsbrr07@gmail.com">Mi correo</a></p>
 </footer>
 
